objects/ASI_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Period_Date__c</fullName>
        <label>Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Period__c</fullName>
        <formula>TEXT ( YEAR( ASI_Forecast_Period_Date__c ) ) &amp;&quot;-&quot;&amp; TEXT ( MONTH( ASI_Forecast_Period_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Region_tx__c</fullName>
        <formula>TEXT(ASI_CRM_Customer__r.ASI_CRM_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Freezed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Sub_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Channel</label>
        <referenceTo>ASI_MFM_Sub_Channel__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_Forecast_Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAI_Forecast_Is_Sell_In__c</fullName>
        <formula>ASI_Forecast_Sub_Channel__r.ASI_Is_Sell_In__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Sell In</label>
        <type>Checkbox</type>
    </fields>
    <label>Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_Forecast_Channel__c</columns>
        <columns>ASI_Forecast_Sub_Channel__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_Forecast_Type__c</columns>
        <columns>ASI_Forecast_Status__c</columns>
        <columns>ASI_Forecast_Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Final_Forecast</fullName>
        <columns>NAME</columns>
        <columns>ASI_Forecast_Channel__c</columns>
        <columns>ASI_Forecast_Region_tx__c</columns>
        <columns>ASI_Forecast_Sub_Channel__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_Forecast_Type__c</columns>
        <columns>ASI_Forecast_Status__c</columns>
        <columns>ASI_Forecast_Period__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_Forecast_Type__c</field>
            <operation>equals</operation>
            <value>Forecast</value>
        </filters>
        <filters>
            <field>ASI_Forecast_Status__c</field>
            <operation>equals</operation>
            <value>Final</value>
        </filters>
        <label>All Forecast-Final</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Forecast</fullName>
        <columns>NAME</columns>
        <columns>ASI_Forecast_Channel__c</columns>
        <columns>ASI_Forecast_Sub_Channel__c</columns>
        <columns>ASI_Forecast_Region_tx__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_Forecast_Type__c</columns>
        <columns>ASI_Forecast_Status__c</columns>
        <columns>ASI_Forecast_Period__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_Forecast_Type__c</field>
            <operation>equals</operation>
            <value>Forecast</value>
        </filters>
        <filters>
            <field>ASI_Forecast_Status__c</field>
            <operation>notEqual</operation>
            <value>Freezed</value>
        </filters>
        <label>All Forecast</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Forecast_Draft</fullName>
        <columns>NAME</columns>
        <columns>ASI_Forecast_Channel__c</columns>
        <columns>ASI_Forecast_Sub_Channel__c</columns>
        <columns>ASI_Forecast_Region_tx__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_Forecast_Type__c</columns>
        <columns>ASI_Forecast_Status__c</columns>
        <columns>ASI_Forecast_Period__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_Forecast_Type__c</field>
            <operation>equals</operation>
            <value>Forecast</value>
        </filters>
        <filters>
            <field>ASI_Forecast_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>All Forecast-Draft</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Forecast_Freezed</fullName>
        <columns>NAME</columns>
        <columns>ASI_Forecast_Channel__c</columns>
        <columns>ASI_Forecast_Region_tx__c</columns>
        <columns>ASI_Forecast_Sub_Channel__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_Forecast_Type__c</columns>
        <columns>ASI_Forecast_Status__c</columns>
        <columns>ASI_Forecast_Period__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_Forecast_Type__c</field>
            <operation>equals</operation>
            <value>Forecast</value>
        </filters>
        <filters>
            <field>ASI_Forecast_Status__c</field>
            <operation>equals</operation>
            <value>Freezed</value>
        </filters>
        <label>All Forecast-Freezed</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Forecast_Submitted</fullName>
        <columns>NAME</columns>
        <columns>ASI_Forecast_Channel__c</columns>
        <columns>ASI_Forecast_Sub_Channel__c</columns>
        <columns>ASI_Forecast_Region_tx__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_Forecast_Type__c</columns>
        <columns>ASI_Forecast_Status__c</columns>
        <columns>ASI_Forecast_Period__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_Forecast_Type__c</field>
            <operation>equals</operation>
            <value>Forecast</value>
        </filters>
        <filters>
            <field>ASI_Forecast_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>All Forecast-Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Forecast Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
    <recordTypes>
        <fullName>ASI_Forecast_TW</fullName>
        <active>true</active>
        <label>TW Forecast</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>